# blog-gate-project

./: .gitignore  README.md  main.py  manage.py  package.json  pnpm-lock.yaml  pyproject.toml
apps/blog/: admin.py  urls.py
apps/blog/forms/: comment_form.py  post_form.py
apps/blog/migrations/: 0001_initial.py  0002_initial.py
apps/blog/models/: __init__.py  comment_model.py  post_model.py
apps/blog/templates/blog/: create.html  delete.html  detail.html  list.html  update.html
apps/blog/templatetags/: blog_tags.py
apps/blog/validators/: title.py
apps/blog/views/: blog_views.py
apps/core/: urls.py  views.py
apps/core/middlewares/: session_expired.py
apps/core/static/css/: home.css
apps/core/static/js/: home.js
apps/core/templates/core/: home.html
apps/core/utils/: markdown_format.py
apps/custom_auth/: admin.py  apps.py  models.py  urls.py  views.py
apps/custom_auth/forms/: login.py  signup.py
apps/custom_auth/management/commands/: create_superuser.py
apps/custom_auth/migrations/: 0001_initial.py
apps/custom_auth/templates/custom_auth/: login.html  session_expired.html  signup.html  signup_done.html
apps/custom_auth/validators/: email.py  name.py  password.py  username.py
blogproject/: asgi.py  urls.py  wsgi.py
blogproject/settings/: base.py  dev.py
templates/base/: base.html  base_auth.html
templates/fragments/: pagination.html
